Fix the alignments

--- a/react-frontend/src/components/logReg/logReg.css
+++ b/react-frontend/src/components/logReg/logReg.css
@@ -23,10 +23,10 @@
 }
 
 .form-wrapper {
-  width: 400px;
+  width: 500px;
   display: flex;
   flex-direction: column;
-  padding: 10px 40px;
+  padding: 80px 80px;
   border-radius: 10px;
   box-shadow: 0px 10px 50px #555;
   background-color: #f7f7f7;
